  problems importing bzrlib from a non-main thread.
  (Elliot Murphy, #521989)

* Standardize the error handling when creating a new ``StaticTuple``
  (problems will raise TypeError). (Matt Nordhoff, #457979)

* Merge correctly when this_tree is not a WorkingTree.  (Aaron Bentley)

Documentation
*************

* Added What's New in Bazaar 2.1 document. (Ian Clatworthy)


bzr 2.1.0
#########

:Codename: Strasbourg
:2.1.0: 2010-02-11

This release marks our second long-term-stable series. The Bazaar team
has decided that we will continue to make bugfix-only 2.0.x and 2.1.x
releases, along with 2.2 development releases. 

This is a fairly incremental update, focusing on polish and bugfixing.
There are no changes for supported disk formats. Key updates include
reduced memory consumption for many operations, a new per-file merge
hook, ignore patterns can now include '!' to exclude files, globbing
support for all commands on Windows, and support for addressing home
directories via ``bzr+ssh://host/~/`` syntax.

Users are encouraged to upgrade from the 2.0 stable series.

Bug Fixes
*********

* Don't require testtools to use sftp.
  (Vincent Ladeuil, #516183)

* Fix "AttributeError in Inter1and2Helper" during fetch.
  (Martin Pool, #513432)

* Ignore ``KeyError`` from ``remove_index`` during ``_abort_write_group``
  in a pack repository, which can happen harmlessly if the abort occurs during
  finishing the write group.  Also use ``bzrlib.cleanup`` so that any
  other errors that occur while aborting the individual packs won't be
  hidden by secondary failures when removing the corresponding indices.
  (Andrew Bennetts, #423015)
  
* Using the ``bzrlib.chk_map`` module from within multiple threads at the
  same time was broken due to race conditions with a module level page
  cache. This shows up as a KeyError in the ``bzrlib.lru_cache`` code with
  ``bzrlib.chk_map`` in the backtrace, and can be triggered without using