@@ -6,22 +6,3 @@
 <a href="http://doc.bazaar-vcs.org/en/">Documentación</a>&nbsp;|&nbsp;</li>
 {{ super() }}
 {% endblock %}
-
-{% block document %}
- <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ?  "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-  <script type="text/javascript">
-  try{
-  var pageTracker = _gat._getTracker("UA-1018242-1");
-  pageTracker._trackPageview();
-  } catch(err) {}
-  try {
-    /* bazaar team tracker */
-    var pageTracker = _gat._getTracker("UA-11329411-2");
-    pageTracker._trackPageview();
-  } catch(err) {}
-</script>
-{{ super() }}
-{% endblock %}
